@@ -274,7 +274,9 @@ var IMLibElement = {
                 }
             } else { // Setting
                 if (INTERMediatorLib.isWidgetElement(element)) {
-                    element._im_setValue(curVal);
+                    if (element._im_setValue) {
+                        element._im_setValue(curVal);
+                    }
                 } else if (curTarget === 'innerHTML') { // Setting
                     if (INTERMediator.isIE && INTERMediator.ieVersion < 10) { // for IE
                         curVal = curVal.replace(/\r\n/g, '\r').replace(/\n/g, '\r').replace(/\r/g, '<br/>');
@@ -308,7 +310,9 @@ var IMLibElement = {
             }
         } else { // if the 'target' is not specified.
             if (INTERMediatorLib.isWidgetElement(element)) {
-                element._im_setValue(curVal);
+                if (element._im_setValue) {
+                    element._im_setValue(curVal);
+                }
             } else if (element.tagName === 'INPUT') {
                 typeAttr = element.getAttribute('type');
                 if (typeAttr === 'checkbox' || typeAttr === 'radio') { // set the value
